<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@drawable/intro_activity_gradient">

    <ImageView
        android:id="@+id/diceImageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_logo"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/playButton"
        app:layout_constraintVertical_chainStyle="packed"
        android:contentDescription="@string/aaa" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="172dp"
        android:layout_height="82dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/playbuttonbackground"
        android:text="@string/play_button_text"
        android:textColor="@color/white"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/diceImageLogo"
        app:layout_constraintBottom_toTopOf="@+id/helpButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/helpButton"
        android:layout_width="172dp"
        android:layout_height="82dp"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/playbuttonbackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/help_button_text"
        android:textColor="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>