<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_activity_gradient"
    tools:context=".IntroActivity"

    >



    <TextView
        android:id="@+id/className"
        android:textColor="@color/white"
        android:text="@string/class_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:padding="2dp"
        android:textSize="20sp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/gameName"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/gameName"
        android:textColor="@color/white"
        android:text="@string/game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/profName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/className"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:padding="2dp"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/profName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/professor_name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/diceGameLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameName"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:padding="2dp"
        android:textSize="20sp"
        app:layout_constraintVertical_chainStyle="packed"/>

    <ImageView
        android:id="@+id/diceGameLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/dice_logo_description"
        android:src="@drawable/dicelogo2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/indeterminateBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profName"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:padding="2dp"
        app:layout_constraintVertical_chainStyle="packed"/>

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressBackgroundTint="#000000"
        android:progressBackgroundTintMode="add"
        android:indeterminateTint="@color/black"
        android:indeterminateBehavior="cycle"
        android:progressTint="#000000"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/teamNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diceGameLogo"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/teamNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_number"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/appAuthors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indeterminateBar"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:textSize="13sp"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/appAuthors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_authors"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@+id/teamNumber"
        app:layout_constraintVertical_chainStyle="packed"/>
</androidx.constraintlayout.widget.ConstraintLayout>