<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:flow_verticalStyle="spread"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@drawable/intro_activity_gradient"
    tools:context=".DiceActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="6"
        app:flow_verticalStyle="packed"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"

            android:orientation="horizontal">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/aiScoreLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ai_score_text_label"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:padding="5dp"
                    app:layout_constraintRight_toLeftOf="@id/aiScore"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/aiScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ai_start_score"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:padding="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/aiScoreLabel" />

                <TextView
                    android:id="@+id/humanScoreLabel1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/human_score_text_label"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:padding="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/humanScore1" />

                <TextView
                    android:id="@+id/humanScore1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/human_start_score"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">
            <TextView
                android:id="@+id/notificationBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:text="@string/notification_bar"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5"
            android:orientation="vertical">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="1"
                android:layout_margin="10px"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="AI:"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:layout_column="0"
                    android:layout_columnWeight="1.5"
                    />
                <RelativeLayout
                    android:id="@+id/row31"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    >


                    <TextView
                        android:id="@+id/row31_tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:layout_centerHorizontal="true"

                        android:padding="5dp"/>

                    <ImageView
                        android:id="@+id/dice_image1"
                        android:layout_width="200px"
                        android:layout_height="200px"
                        android:layout_centerHorizontal="true"

                        android:src="@drawable/dice1v2"></ImageView>
                    <ProgressBar
                        android:id="@+id/row31_pb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminateTint="@color/black"
                        android:indeterminateBehavior="cycle"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:layout_centerHorizontal="true"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/row32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:layout_column="2"
                    android:layout_columnWeight="1"
                    >

                    <TextView
                        android:id="@+id/row32_tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:layout_centerHorizontal="true"
                        android:padding="5dp"/>

                    <ImageView
                        android:id="@+id/dice_image2"
                        android:layout_width="200px"
                        android:layout_height="200px"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/dice1v2"></ImageView>
                    <ProgressBar
                        android:id="@+id/row32_pb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminateTint="@color/black"
                        android:indeterminateBehavior="cycle"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:layout_centerHorizontal="true"
                        />
                </RelativeLayout>
            </GridLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Human Turn: "
                android:textColor="@color/white"
                android:textSize="15sp"/>
            <GridView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:columnWidth="100dp"
                android:horizontalSpacing="0dp"
                android:verticalSpacing="15dp"
                android:numColumns="3"
                android:id="@+id/gridItemDice"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <LinearLayout
                android:id="@+id/row33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:orientation="horizontal"
                >
                <ProgressBar
                    android:id="@+id/row33_pb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/black"
                    android:indeterminateBehavior="cycle"
                    android:visibility="invisible"
                    android:textColor="@color/black"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/row33_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/row33_tv_label"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>
                <Spinner
                    android:id="@+id/row33_sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/row34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:orientation="horizontal"
                android:layout_margin="10dp"

                >
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="1"
                    android:layout_margin="10px"
                    >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_columnWeight="2"
                        >
                        <TextView
                            android:id="@+id/row34_tv1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/row34_tv1_label"
                            android:visibility="invisible"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:layout_column="0"
                            android:layout_columnWeight="1"
                            />
                        <TextView
                            android:id="@+id/row34_tv2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:textSize="15sp"
                            android:padding="5dp"
                            android:layout_column="1"
                            />
                        <Button
                            android:id="@+id/row34_bt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/row34_button_text"
                            android:textColor="@color/white"
                            android:padding="5dp"
                            android:layout_column="1"

                            />
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        >
                        <ImageView
                            android:id="@+id/dice_image3"
                            android:layout_width="200px"
                            android:layout_height="200px"
                            android:layout_marginLeft="20dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/dice1v2">
                        </ImageView>
                        <ProgressBar
                            android:id="@+id/row34_pb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:indeterminateTint="@color/black"
                            android:indeterminateBehavior="cycle"
                            android:visibility="invisible"
                            android:textColor="@color/black"
                            android:padding="5dp"
                            android:layout_centerHorizontal="true"
                            />
                    </RelativeLayout>
                </GridLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>